[gd_scene load_steps=19 format=3 uid="uid://buhi6arioj2je"]

[ext_resource type="Script" path="res://base_game/scripts/ui/menu_manager.gd" id="1_1hdj3"]
[ext_resource type="Script" path="res://base_game/scripts/network.gd" id="1_51f1j"]
[ext_resource type="Theme" uid="uid://cvnf3xtqitxrh" path="res://base_game/assets/cogs_box_theme.tres" id="1_p0d0r"]
[ext_resource type="Script" path="res://base_game/scripts/ui/main_menu.gd" id="1_uc6kl"]
[ext_resource type="Script" path="res://base_game/scripts/ui/relay_panel.gd" id="2_8edrq"]
[ext_resource type="Script" path="res://base_game/scripts/ui/join_host_panel.gd" id="3_ah6gk"]
[ext_resource type="Texture2D" uid="uid://cs7pm0utdn8i5" path="res://base_game/assets/art/cogs-bg.PNG" id="3_iobb2"]
[ext_resource type="Texture2D" uid="uid://qxuxsf10ddot" path="res://base_game/assets/art/jambox-full.PNG" id="4_3u43p"]
[ext_resource type="Script" path="res://base_game/scripts/ui/host_lobby_panel.gd" id="4_86h1h"]
[ext_resource type="Script" path="res://base_game/scripts/ui/player_lobby_panel.gd" id="5_o4tag"]
[ext_resource type="Texture2D" uid="uid://b0535plqbdoea" path="res://base_game/assets/art/gradient.png" id="5_q1q6t"]
[ext_resource type="Texture2D" uid="uid://d20skyj5x4gum" path="res://base_game/assets/art/POGS.png" id="6_nkhmq"]
[ext_resource type="Script" path="res://base_game/scripts/room_manager.gd" id="6_olaue"]
[ext_resource type="Script" path="res://base_game/scripts/ui/error_panel.gd" id="7_rwkk3"]
[ext_resource type="Texture2D" uid="uid://cfkju7wiwvilr" path="res://base_game/assets/art/pogs_box.png" id="7_t64cq"]
[ext_resource type="Script" path="res://base_game/scripts/ui/in_game_panel.gd" id="10_h4wvk"]
[ext_resource type="Script" path="res://base_game/scripts/config.gd" id="14_pn2eo"]
[ext_resource type="PackedScene" uid="uid://lcfau7tnyuti" path="res://room_games/quiplash/scenes/quiplash.tscn" id="15_ftrbr"]
[ext_resource type="Script" path="res://base_game/scripts/ui_scaler.gd" id="17_diokc"]

[node name="Main" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="MainMenu" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("_network", "_menu_manager")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p0d0r")
script = ExtResource("1_uc6kl")
_network = NodePath("../../Network")
_menu_manager = NodePath("MenuManager")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_iobb2")
expand_mode = 2
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MainMenu/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0, 0.101961, 0.403922)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainMenu/TextureRect"]
custom_minimum_size = Vector2(1024, 1024)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -250.0
offset_bottom = 250.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("4_3u43p")
expand_mode = 4
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/MainMenu/TextureRect"]
self_modulate = Color(0, 0, 0, 0.470588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_q1q6t")
expand_mode = 1

[node name="POGS" type="TextureRect" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_nkhmq")
expand_mode = 2
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MainMenu/POGS"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.347019, 0.00094163, 0.523593, 0.403922)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainMenu/POGS"]
custom_minimum_size = Vector2(1024, 1024)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1203.0
offset_top = -826.0
offset_right = 223.0
offset_bottom = 830.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("7_t64cq")
expand_mode = 4
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/MainMenu/POGS"]
self_modulate = Color(0, 0, 0, 0.470588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_q1q6t")
expand_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/POGS"]
layout_mode = 0
offset_left = 30.0
offset_top = 400.0
offset_right = 407.0
offset_bottom = 445.0
theme_override_font_sizes/font_size = 37
text = "made in google drawings"

[node name="MenuManager" type="Control" parent="CanvasLayer/MainMenu" node_paths=PackedStringArray("_room_manager")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1hdj3")
_room_manager = NodePath("../../../RoomManager")

[node name="JoinHostPanel" type="PanelContainer" parent="CanvasLayer/MainMenu/MenuManager" node_paths=PackedStringArray("_network", "_room_manager", "_menu_manager", "_code_line_edit", "_name_line_edit", "_join_button", "_host_button", "_game_option_button", "_config", "_ui_scaler", "_can_host_question", "_host_buttons")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -108.0
offset_right = 100.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ah6gk")
_network = NodePath("../../../../Network")
_room_manager = NodePath("../../../../RoomManager")
_menu_manager = NodePath("..")
_code_line_edit = NodePath("VBoxContainer/CodeLineEdit")
_name_line_edit = NodePath("VBoxContainer/UsernameLineEdit")
_join_button = NodePath("VBoxContainer/JoinButton")
_host_button = NodePath("VBoxContainer/HostButton/HostButton")
_game_option_button = NodePath("VBoxContainer/HostButton/GameOptionButton")
_config = NodePath("../../../../Config")
_ui_scaler = NodePath("../../../../UIScaler")
_can_host_question = NodePath("VBoxContainer/CanHostQuestion")
_host_buttons = NodePath("VBoxContainer/HostButton")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "POG Box"
uppercase = true

[node name="Control" type="Control" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="CodeLineEdit" type="LineEdit" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter 4-Letter Code"
max_length = 6

[node name="UsernameLineEdit" type="LineEdit" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Your Name"
max_length = 12

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Control2" type="Control" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="HostButton" type="VBoxContainer" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel/VBoxContainer"]
layout_mode = 2

[node name="GameOptionButton" type="OptionButton" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel/VBoxContainer/HostButton"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "TEST GAME"

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel/VBoxContainer/HostButton"]
layout_mode = 2
text = "Host"

[node name="CanHostQuestion" type="Label" parent="CanvasLayer/MainMenu/MenuManager/JoinHostPanel/VBoxContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0.392157)
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
text = "Want to host a game? Get on your computer or tablet!"
autowrap_mode = 2

[node name="HostLobbyPanel" type="PanelContainer" parent="CanvasLayer/MainMenu/MenuManager" node_paths=PackedStringArray("_network", "_room_manager", "_code_label", "_players_label", "_quit_button")]
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -108.0
offset_right = 100.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_86h1h")
_network = NodePath("../../../../Network")
_room_manager = NodePath("../../../../RoomManager")
_code_label = NodePath("VBoxContainer/CodeLabel")
_players_label = NodePath("VBoxContainer/ScrollContainer/PlayersLabel")
_quit_button = NodePath("VBoxContainer/QuitButton")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MenuManager/HostLobbyPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MenuManager/HostLobbyPanel/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "LOBBY"
uppercase = true

[node name="CodeLabel" type="Label" parent="CanvasLayer/MainMenu/MenuManager/HostLobbyPanel/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "QVWD"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/MainMenu/MenuManager/HostLobbyPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="PlayersLabel" type="Label" parent="CanvasLayer/MainMenu/MenuManager/HostLobbyPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
text = "P1"

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu/MenuManager/HostLobbyPanel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="PlayerLobbyPanel" type="PanelContainer" parent="CanvasLayer/MainMenu/MenuManager" node_paths=PackedStringArray("_network", "_room_manager", "_code_label", "_username_label", "_test_button", "_quit_button", "_start_button")]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -108.0
offset_right = 100.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_o4tag")
_network = NodePath("../../../../Network")
_room_manager = NodePath("../../../../RoomManager")
_code_label = NodePath("VBoxContainer/CodeLabel")
_username_label = NodePath("VBoxContainer/UsernameLabel")
_test_button = NodePath("VBoxContainer/TestButton")
_quit_button = NodePath("VBoxContainer/QuitButton")
_start_button = NodePath("VBoxContainer/StartButton")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MenuManager/PlayerLobbyPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MenuManager/PlayerLobbyPanel/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "LOBBY"

[node name="CodeLabel" type="Label" parent="CanvasLayer/MainMenu/MenuManager/PlayerLobbyPanel/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "QVWD"

[node name="UsernameLabel" type="Label" parent="CanvasLayer/MainMenu/MenuManager/PlayerLobbyPanel/VBoxContainer"]
layout_mode = 2
text = "Username"

[node name="Control" type="Control" parent="CanvasLayer/MainMenu/MenuManager/PlayerLobbyPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="TestButton" type="Button" parent="CanvasLayer/MainMenu/MenuManager/PlayerLobbyPanel/VBoxContainer"]
layout_mode = 2
text = "Test Input"

[node name="StartButton" type="Button" parent="CanvasLayer/MainMenu/MenuManager/PlayerLobbyPanel/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu/MenuManager/PlayerLobbyPanel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="InGamePanel" type="MarginContainer" parent="CanvasLayer/MainMenu/MenuManager" node_paths=PackedStringArray("_network", "_quit_button")]
layout_mode = 1
offset_right = 100.0
offset_bottom = 63.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("10_h4wvk")
_network = NodePath("../../../../Network")
_quit_button = NodePath("QuitButton")

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu/MenuManager/InGamePanel"]
layout_mode = 2
text = "Quit"

[node name="RelayPanel" type="MarginContainer" parent="CanvasLayer/MainMenu" node_paths=PackedStringArray("_network", "_config_relay_button", "_connect_relay_button", "_relay_address_line_edit", "_config_panel", "_config_label")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -204.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("2_8edrq")
_network = NodePath("../../../Network")
_config_relay_button = NodePath("VBoxContainer/ConfigButton")
_connect_relay_button = NodePath("VBoxContainer/ConfigPanel/VBoxContainer/ConnectButton")
_relay_address_line_edit = NodePath("VBoxContainer/ConfigPanel/VBoxContainer/AddressLineEdit")
_config_panel = NodePath("VBoxContainer/ConfigPanel")
_config_label = NodePath("VBoxContainer/ConfigPanel/VBoxContainer/ConfigLabel")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/RelayPanel"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 2

[node name="ConfigPanel" type="PanelContainer" parent="CanvasLayer/MainMenu/RelayPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/RelayPanel/VBoxContainer/ConfigPanel"]
layout_mode = 2

[node name="ConfigLabel" type="Label" parent="CanvasLayer/MainMenu/RelayPanel/VBoxContainer/ConfigPanel/VBoxContainer"]
layout_mode = 2
text = "Relay"

[node name="AddressLineEdit" type="LineEdit" parent="CanvasLayer/MainMenu/RelayPanel/VBoxContainer/ConfigPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ws://127.0.0.1:9955"
placeholder_text = "Address"

[node name="ConnectButton" type="Button" parent="CanvasLayer/MainMenu/RelayPanel/VBoxContainer/ConfigPanel/VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="ConfigButton" type="Button" parent="CanvasLayer/MainMenu/RelayPanel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
text = "Config Relay"

[node name="ErrorPanel" type="MarginContainer" parent="CanvasLayer/MainMenu" node_paths=PackedStringArray("_network", "_error_label")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("7_rwkk3")
_network = NodePath("../../../Network")
_error_label = NodePath("ErrorLabel")

[node name="ErrorLabel" type="Label" parent="CanvasLayer/MainMenu/ErrorPanel"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = "asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Network" type="Node" parent="."]
script = ExtResource("1_51f1j")
server_address = "wss://atlinx.net/jambox/server"
auto_reconnect = true

[node name="RoomManager" type="Node" parent="." node_paths=PackedStringArray("_config", "_network")]
script = ExtResource("6_olaue")
_config = NodePath("../Config")
_network = NodePath("../Network")
max_players = 3

[node name="Config" type="Node" parent="."]
script = ExtResource("14_pn2eo")
games = Array[PackedScene]([ExtResource("15_ftrbr")])

[node name="UIScaler" type="Node" parent="."]
script = ExtResource("17_diokc")
